database + modifiche classi dominio