@@ -1,10 +1,9 @@
 package it.unisa.musicplaylistmanager.model.library;
 
+import it.unisa.musicplaylistmanager.exceptions.DuplicatedSongException;
 import it.unisa.musicplaylistmanager.model.entity.Song;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
@@ -13,13 +12,13 @@ import java.util.stream.Collectors;
 public class SongCatalog {
 
 
-    private final List<Song> songs;
+    private final Map<UUID, Song> songs;
 
     /**
      * Crea un nuovo catalogo vuoto.
      */
     public SongCatalog() {
-        this.songs = new ArrayList<>();
+        this.songs = new HashMap<>();
     }
 
     /**
@@ -27,15 +26,15 @@ public class SongCatalog {
      *
      * @param song traccia da aggiungere;
      */
-    public void addSong(Song song) {
+    public void addSong(Song song) throws IllegalArgumentException, DuplicatedSongException {
         if (song == null) {
             throw new IllegalArgumentException("La traccia non può essere null.");
         }
         if (contains(song)) {
-            throw new IllegalArgumentException(
+            throw new DuplicatedSongException(
                 "Una traccia con ID '" + song.getId() + "' è già presente nel catalogo.");
         }
-        songs.add(song);
+        songs.put(song.getId(), song);
     }
 
     /**
@@ -43,15 +42,16 @@ public class SongCatalog {
      *
      * @param song traccia da rimuovere;
      */
-    public void removeSong(Song song) {
+    public void removeSong(Song song) throws IllegalArgumentException {
         if (song == null) {
             throw new IllegalArgumentException("La traccia non può essere null.");
         }
-        boolean rimossa = songs.removeIf(s -> s.getId().equals(song.getId()));
-        if (!rimossa) {
+        if (!contains(song)) {
             throw new IllegalArgumentException(
                 "La traccia '" + song.getTitle() + "' non è presente nel catalogo.");
         }
+
+        songs.remove(song.getId());
     }
 
     /**
@@ -60,17 +60,15 @@ public class SongCatalog {
      * @param query testo da cercare;
      * @return lista delle tracce
      */
-    public List<Song> searchSong(String query) {
+    public List<Song> searchSong(String query) throws IllegalArgumentException {
         if (query == null) {
             throw new IllegalArgumentException("La query di ricerca non può essere null.");
         }
         String queryLower = query.trim().toLowerCase();
-        return songs.stream()
+        return songs.values().stream()
             .filter(s -> s.getTitle().toLowerCase().contains(queryLower))
-            .collect(Collectors.toList());
+            .toList();
     }
-
-
 
     /**
      * Verifica se una traccia  è presente nel catalogo.
@@ -80,9 +78,8 @@ public class SongCatalog {
      */
     public boolean contains(Song song) {
         if (song == null) return false;
-        return songs.contains(song);
+        return songs.containsKey(song.getId());
     }
-
 
     /**
      * Restituisce una lista di tutte le tracce del catalogo.
@@ -91,7 +88,7 @@ public class SongCatalog {
      */
     public List<Song> getAllSongs() {
 
-        return Collections.unmodifiableList(songs);
+        return Collections.unmodifiableList(songs.values().stream().toList());
     }
 
     /**
